Issue #2277661 by alexrayu, joelpittet: Fixed Labels with display:block and 'for' attribute have an invisible hit area that is accidently clicked.

--- a/core/themes/bartik/css/style.css
+++ b/core/themes/bartik/css/style.css
@@ -1403,8 +1403,11 @@ details .details-description {
   font-style: italic;
 }
 label {
-  display: block;
+  display: table;
   font-weight: bold;
+}
+label[for] {
+  cursor: pointer;
 }
 input {
   margin: 2px 0;
