--- a/core/themes/seven/style.css
+++ b/core/themes/seven/style.css
@@ -764,10 +764,13 @@ fieldset {
   padding: 0;
 }
 label {
-  display: block;
+  display: table;
   margin: 0;
   padding: 0;
   font-weight: bold;
+}
+label[for] {
+  cursor: pointer;
 }
 .form-item label.option {
   font-size: 0.923em;
